--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,7 @@ header.main {
         padding: 0.5em;
         text-transform: uppercase;
         letter-spacing: 0.354em;
+        color: #bfb;
         a {
           color: #bfb;
           text-decoration: none;
