--- a/app/views/store/index.html.erb
+++ b/app/views/store/index.html.erb
@@ -3,6 +3,9 @@
 <% end %>
 
 <h1>Your Pragmatic Catalog</h1>
+<% if @counter > 5 %>
+  <p>You've been here <%= "#{pluralize(@counter, 'time')}." %></p>
+<% end %>
 
 <ul class="catalog">
   <% cache @products do %>
