moved cart to the sidebar on the store index page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,14 +1,16 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
+ * This is a manifest file that'll be compiled into application.css, which will
+ * include all the files listed below.
  *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
+ * Any CSS and SCSS file within this directory, lib/assets/stylesheets, or any
+ * plugin's vendor/assets/stylesheets directory can be referenced here using a
+ * relative path.
  *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
+ * You're free to add application-wide styles to this file and they'll appear
+ * at the bottom of the compiled file so the styles you add here take
+ * precedence over styles defined in any other CSS/SCSS files in this
+ * directory. Styles in this file should be added after the last require_*
+ * statement. It is generally better to create a new file per style scope.
  *
  *= require_tree .
  *= require_self
@@ -30,6 +32,16 @@ header.main {
   }
 }
 
+.notice, #notice {
+  background: #ffb;
+  border-radius: 0.5em;
+  border: solid 0.177em #882;
+  color: #882;
+  font-weight: bold;
+  margin-bottom: 1em;
+  padding: 1em 1.414em;
+  text-align: center;
+}
 .content {
   margin: 0;
   padding: 0;
@@ -53,6 +65,21 @@ header.main {
       text-align: left; // desktop nav is left-aligned
       padding: 1em;     // and needs more padding
     }
+
+    #cart {
+      article {
+        h2 {
+          margin-top: 0;
+        }
+        background: white;
+        border-radius: 0.5em;
+        margin: 1em;
+        padding: 1.414em;
+        @media (min-width: 30em) {
+          margin: 0; // desktop doesn't need this margin
+        }
+      }
+    }
     ul {
       list-style: none;
       margin: 0;
@@ -65,7 +92,6 @@ header.main {
         padding: 0.5em;
         text-transform: uppercase;
         letter-spacing: 0.354em;
-        color: #bfb;
         a {
           color: #bfb;
           text-decoration: none;
@@ -80,15 +106,4 @@ header.main {
   main {
     padding: 0.5em;
   }
-}
-
-.notice, #notice {
-  background: #ffb;
-  border-radius: 0.5em;
-  border: solid 0.177em #882;
-  color: #882;
-  font-weight: bold;
-  margin-bottom: 1em;
-  padding: 1em 1.414em;
-  text-align: center;
 }
