--- a/app/views/line_items/_line_item.html.erb
+++ b/app/views/line_items/_line_item.html.erb
@@ -3,6 +3,7 @@
   <td><%= line_item.product.title %></td>
   <td class="price"><%= number_to_currency(line_item.total_price) %></td>
   <td><%= button_to 'Delete', line_item, method: :delete,
+                      remote: true,
                       data: { confirm: 'Are you sure?' } %>
   </td>
 </tr>
