--- a/app/views/carts/_cart.html.erb
+++ b/app/views/carts/_cart.html.erb
@@ -15,6 +15,7 @@
   </table>
   <%= button_to 'Empty cart', cart,
                 method: :delete,
+                remote: true,
                 data: { confirm: 'Are you sure?' } %>
 
 </article>
