hide cart when its empty after a line_item is deleted

--- a/app/views/line_items/destroy.js.erb
+++ b/app/views/line_items/destroy.js.erb
@@ -1,2 +1,6 @@
 cart = document.getElementById('cart')
-cart.innerHTML = "<%= j render(@cart) %>"
+<% if @cart.line_items.any? %>
+  cart.innerHTML = "<%= j render(@cart) %>"
+<% else %>
+  cart.innerHTML = ''
+<% end %>
